add auth check endpoint
