# backend/internal/controller/http/v1/auth.go
@@ -33,6 +33,7 @@ func (h *authHandler) Register(mux *http.ServeMux) {
 	mux.HandleFunc(fmt.Sprintf("%s %s/verify-email", http.MethodPost, baseAuthPath), errMdw(logMdw(h.verifyEmail)))
 	mux.HandleFunc(fmt.Sprintf("%s %s/get-verification-code", http.MethodPost, baseAuthPath), errMdw(logMdw(h.getVerificationCode)))
 	mux.HandleFunc(fmt.Sprintf("%s %s/refresh-tokens", http.MethodPost, baseAuthPath), errMdw(logMdw(h.refreshTokens)))
+	mux.HandleFunc(fmt.Sprintf("%s %s/check-auth", http.MethodGet, baseAuthPath), errMdw(authMdw(logMdw(h.checkAuthHeader), h.signingKey)))
 }
 
 type (
@@ -43,17 +44,17 @@ type (
 	}
 )
 
-// @Summary		Register user
-// @Description	register new user
-// @Tags			auth
-// @Accept			json
-// @Param			request	body	v1.registerRequest	true	"register request parameters"
-// @Produce		json
-// @Success		200	"OK. Message was sent to user"
-// @Failure		400	{object}	apperr.AppError	"Bad Request"
-// @Failure		409	{object}	apperr.AppError	"Conflict. User with provided email already exists"
-// @Failure		500	{object}	apperr.AppError	"Internal Server Error"
-// @Router			/auth/register [post]
+//	@Summary		Register user
+//	@Description	register new user
+//	@Tags			auth
+//	@Accept			json
+//	@Param			request	body	v1.registerRequest	true	"register request parameters"
+//	@Produce		json
+//	@Success		200	"OK. Message was sent to user"
+//	@Failure		400	{object}	apperr.AppError	"Bad Request"
+//	@Failure		409	{object}	apperr.AppError	"Conflict. User with provided email already exists"
+//	@Failure		500	{object}	apperr.AppError	"Internal Server Error"
+//	@Router			/auth/register [post]
 func (h *authHandler) registerUser(w http.ResponseWriter, r *http.Request) error {
 	w.Header().Set("Content-Type", "application/json")
 	const op string = "authHandler.registerUser"
@@ -95,17 +96,17 @@ type (
 	}
 )
 
-// @Summary		Verify user's email
-// @Description	verify user's email by confirmation code
-// @Tags			auth
-// @Accept			json
-// @Param			request	body	v1.verifyCodeRequest	true	"verify code request parameters"
-// @Produce		json
-// @Success		200	{object}	v1.verifyCodeResponse	"OK. User was verified"
-// @Failure		400	{object}	apperr.AppError			"Bad Request"
-// @Failure		401	{object}	apperr.AppError			"Unauthorized. User provided invalid verification code"
-// @Failure		500	{object}	apperr.AppError			"Internal Server Error"
-// @Router			/auth/verify-email [post]
+//	@Summary		Verify user's email
+//	@Description	verify user's email by confirmation code
+//	@Tags			auth
+//	@Accept			json
+//	@Param			request	body	v1.verifyCodeRequest	true	"verify code request parameters"
+//	@Produce		json
+//	@Success		200	{object}	v1.verifyCodeResponse	"OK. User was verified"
+//	@Failure		400	{object}	apperr.AppError			"Bad Request"
+//	@Failure		401	{object}	apperr.AppError			"Unauthorized. User provided invalid verification code"
+//	@Failure		500	{object}	apperr.AppError			"Internal Server Error"
+//	@Router			/auth/verify-email [post]
 func (h *authHandler) verifyEmail(w http.ResponseWriter, r *http.Request) error {
 	w.Header().Set("Content-Type", "application/json")
 	const op string = "authHandler.verifyEmail"
@@ -159,17 +160,17 @@ type (
 	}
 )
 
-// @Summary		Log user in
-// @Description	log user in
-// @Tags			auth
-// @Accept			json
-// @Param			request	body	v1.loginRequest	true	"login request parameters"
-// @Produce		json
-// @Success		200	{object}	v1.loginResponse	"OK. User was logged in"
-// @Failure		400	{object}	apperr.AppError		"Bad Request"
-// @Failure		401	{object}	apperr.AppError		"Unauthorized. Email or password is incorrect"
-// @Failure		500	{object}	apperr.AppError		"Internal Server Error"
-// @Router			/auth/login [post]
+//	@Summary		Log user in
+//	@Description	log user in
+//	@Tags			auth
+//	@Accept			json
+//	@Param			request	body	v1.loginRequest	true	"login request parameters"
+//	@Produce		json
+//	@Success		200	{object}	v1.loginResponse	"OK. User was logged in"
+//	@Failure		400	{object}	apperr.AppError		"Bad Request"
+//	@Failure		401	{object}	apperr.AppError		"Unauthorized. Email or password is incorrect"
+//	@Failure		500	{object}	apperr.AppError		"Internal Server Error"
+//	@Router			/auth/login [post]
 func (h *authHandler) loginUser(w http.ResponseWriter, r *http.Request) error {
 	w.Header().Set("Content-Type", "application/json")
 	const op string = "authHandler.loginUser"
@@ -216,17 +217,17 @@ type (
 	}
 )
 
-// @Summary		Get verification code
-// @Description	send verification code to user's email
-// @Tags			auth
-// @Accept			json
-// @Param			request	body	v1.getVerifCodeRequest	true	"getVerifCode request parameters"
-// @Produce		json
-// @Success		200	"OK. Email with verification code was sent to user"
-// @Failure		400	{object}	apperr.AppError	"Bad Request"
-// @Failure		404	{object}	apperr.AppError	"Not Found. User with provided email is not signing up"
-// @Failure		500	{object}	apperr.AppError	"Internal Server Error"
-// @Router			/auth/get-verification-code [post]
+//	@Summary		Get verification code
+//	@Description	send verification code to user's email
+//	@Tags			auth
+//	@Accept			json
+//	@Param			request	body	v1.getVerifCodeRequest	true	"getVerifCode request parameters"
+//	@Produce		json
+//	@Success		200	"OK. Email with verification code was sent to user"
+//	@Failure		400	{object}	apperr.AppError	"Bad Request"
+//	@Failure		404	{object}	apperr.AppError	"Not Found. User with provided email is not signing up"
+//	@Failure		500	{object}	apperr.AppError	"Internal Server Error"
+//	@Router			/auth/get-verification-code [post]
 func (h *authHandler) getVerificationCode(w http.ResponseWriter, r *http.Request) error {
 	w.Header().Set("Content-Type", "application/json")
 	const op string = "authHandler.getVerificationCode"
@@ -268,17 +269,17 @@ type (
 	}
 )
 
-// @Summary		Refresh tokens
-// @Description	get new access and refresh tokens
-// @Tags			auth
-// @Accept			json
-// @Param			request	body	v1.refreshTokensRequest	true	"refreshTokens request parameters"
-// @Produce		json
-// @Success		200	{object}	v1.refreshTokensResponse	"OK. Tokens were refreshed"
-// @Failure		400	{object}	apperr.AppError				"Bad Request"
-// @Failure		401	{object}	apperr.AppError				"Unauthorized. Request cannot be processed with provided credentials"
-// @Failure		500	{object}	apperr.AppError				"Internal Server Error"
-// @Router			/auth/refresh-tokens [post]
+//	@Summary		Refresh tokens
+//	@Description	get new access and refresh tokens
+//	@Tags			auth
+//	@Accept			json
+//	@Param			request	body	v1.refreshTokensRequest	true	"refreshTokens request parameters"
+//	@Produce		json
+//	@Success		200	{object}	v1.refreshTokensResponse	"OK. Tokens were refreshed"
+//	@Failure		400	{object}	apperr.AppError				"Bad Request"
+//	@Failure		401	{object}	apperr.AppError				"Unauthorized. Request cannot be processed with provided credentials"
+//	@Failure		500	{object}	apperr.AppError				"Internal Server Error"
+//	@Router			/auth/refresh-tokens [post]
 func (h *authHandler) refreshTokens(w http.ResponseWriter, r *http.Request) error {
 	w.Header().Set("Content-Type", "application/json")
 	const op string = "authHandler.refreshTokens"
@@ -322,6 +323,21 @@ func (h *authHandler) refreshTokens(w http.ResponseWriter, r *http.Request) erro
 	}
 
 	w.Write(respData)
+
+	return nil
+}
+
+//	@Summary		Check auth header
+//	@Description	check access token 
+//	@Tags			auth
+//	@Param			Authorization	header	string	true	"Authorization header must be set for valid response. It should be in format: Bearer {access_token}"
+//	@Success		200				"OK. Access token is valid"
+//	@Failure		400				{object}	apperr.AppError	"Bad Request"
+//	@Failure		401				"Unauthorized"
+//	@Failure		500				{object}	apperr.AppError	"Internal Server Error"
+//	@Router			/auth/check-auth [get]
+func (h *authHandler) checkAuthHeader(w http.ResponseWriter, r *http.Request) error {
+	w.Header().Set("Content-Type", "application/json")
 
 	return nil
 }
